chore(vanilla): Emit build files in correct directory

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,8 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "declaration": false,
-    "outDir": "./dist",
+    "declaration": true,
     "noEmit": false
   }
 }
