--- a/packages/vanilla/tsconfig.json
+++ b/packages/vanilla/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../../tsconfig.node.json",
-  "include": ["./src"]
+  "include": ["./src"],
+  "compilerOptions": {
+    "outDir": "./dist"
+  }
 }
