--- a/packages/vanilla/package.json
+++ b/packages/vanilla/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@yaal/vanilla",
+  "name": "@yaasl/vanilla",
   "version": "0.0.1",
-  "description": "Vanilla javascript package of yaal",
+  "description": "Vanilla javascript package of yaasl",
   "keywords": [
     "vanilla-js",
     "atom",
