chore: Exclude test files from build

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.node.json",
   "include": ["./src"],
+  "exclude": ["./**/*.test.ts"],
   "compilerOptions": {
     "lib": ["dom", "esnext"],
     "jsx": "react",
