--- a/packages/vanilla/tsconfig.json
+++ b/packages/vanilla/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.node.json",
   "include": ["./src"],
+  "exclude": ["./**/*.test.ts"],
   "compilerOptions": {
     "outDir": "./dist"
   }
