--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@pretty-cozy/git-hooks": "^0.1.0",
     "@types/jest": "^29.5.1",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   },
