--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^29.5.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "rimraf": "^5.0.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   },
