--- a/packages/vanilla/package.json
+++ b/packages/vanilla/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf ./dist && tsc",
     "test": "jest --config ../../jest.config.json",
     "test:watch": "npm run test -- --watchAll"
   }
