test(react): Add tests for useAtom hooks

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -20,6 +20,7 @@
     "@yaasl/vanilla": ">= 0"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.6",
     "@yaasl/vanilla": "file:../vanilla",
     "react": "^18.2.0"
