--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -10,6 +10,7 @@
   "author": "PrettyCoffee",
   "license": "MIT",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "test": "jest --config ../../jest.config.json",
