--- a/packages/react/tsconfig.cjs.json
+++ b/packages/react/tsconfig.cjs.json
@@ -1,7 +1,8 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.cjs.json",
   "include": ["./src"],
   "compilerOptions": {
+    "outDir": "./dist/cjs",
     "jsx": "react"
   }
 }
