--- a/packages/vanilla/package.json
+++ b/packages/vanilla/package.json
@@ -9,10 +9,25 @@
   ],
   "author": "PrettyCoffee",
   "license": "MIT",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "exports": {
+    "import": {
+      "default": "./dist/mjs/index.js",
+      "types": "./dist/@types/index.d.ts"
+    },
+    "require": {
+      "default": "./dist/cjs/index.js",
+      "types": "./dist/@types/index.d.ts"
+    }
+  },
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/@types/index.d.ts",
   "scripts": {
-    "build": "rimraf ./dist && tsc",
+    "build": "run-s clean compile",
+    "clean": "rimraf ./dist",
+    "compile": "run-p compile:mjs compile:cjs compile:types",
+    "compile:mjs": "tsc --p ./tsconfig.mjs.json",
+    "compile:cjs": "tsc --p ./tsconfig.cjs.json",
+    "compile:types": "tsc --p ./tsconfig.mjs.json --declaration --emitDeclarationOnly --outDir ./dist/@types",
     "test": "jest --config ../../jest.config.json",
     "test:watch": "npm run test -- --watchAll"
   }
