docs(root): Update readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yaasl",
+  "name": "@yaasl/root",
   "version": "0.0.1",
   "description": "yet another atom store library",
   "author": "PrettyCoffee",
