--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,14 @@
 {
   "extends": [
-    "@pretty-cozy/eslint-config/base-ts"
+    "@pretty-cozy/eslint-config/base-ts",
+    "@pretty-cozy/eslint-config/react"
   ],
+  "ignorePatterns": "**/demo/**",
+  "rules": {
+    "import/no-extraneous-dependencies": ["error", {
+      "peerDependencies": true
+    }]
+  },
   "overrides": [
     {
       "files": "*.test.*",
