--- a/demo/vanilla/package.json
+++ b/demo/vanilla/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ./src --ignore-path ../../.gitignore",
+    "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@yaasl/devtools": "file:../../packages/devtools",
-    "@yaasl/core": "file:../../packages/core"
+    "yaasl": "file:../../"
   },
   "devDependencies": {
     "vite": "^4.3.2"
