--- a/package.json
+++ b/package.json
@@ -1,27 +1,75 @@
 {
-  "name": "@yaasl/root",
+  "name": "yaasl",
   "version": "0.0.1",
-  "description": "yet another atom store library",
+  "description": "yet another atomic store library",
+  "keywords": [
+    "atom",
+    "store",
+    "vanilla-js",
+    "react"
+  ],
   "author": "PrettyCoffee",
   "license": "MIT",
+  "exports": {
+    ".": {
+      "import": {
+        "default": "./dist/mjs/index.js",
+        "types": "./dist/@types/index.d.ts"
+      },
+      "require": {
+        "default": "./dist/cjs/index.js",
+        "types": "./dist/@types/index.d.ts"
+      }
+    },
+    "./*": {
+      "import": {
+        "default": "./dist/mjs/*/index.js",
+        "types": "./dist/@types/*/index.d.ts"
+      },
+      "require": {
+        "default": "./dist/cjs/*/index.js",
+        "types": "./dist/@types/*/index.d.ts"
+      }
+    }
+  },
+  "main": "./dist/cjs/all.js",
+  "types": "./dist/@types/all.d.ts",
+  "workspaces": [
+    "./",
+    "./demo/*"
+  ],
   "scripts": {
-    "build": "npm run build --workspaces --if-present",
-    "test": "npm run test --workspaces --if-present",
-    "lint": "eslint . --ignore-path .gitignore",
+    "build": "run-s clean compile",
+    "clean": "rimraf ./dist",
+    "compile": "run-p compile:mjs compile:cjs compile:types",
+    "compile:mjs": "tsc --p ./tsconfig.mjs.json",
+    "compile:cjs": "tsc --p ./tsconfig.cjs.json",
+    "compile:types": "tsc --p ./tsconfig.mjs.json --declaration --emitDeclarationOnly --outDir ./dist/@types",
+    "test": "jest --testMatch **/*.test.*",
+    "test:watch": "npm run test -- --watchAll",
+    "lint": "eslint ./src --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "prepare": "cozy-git-hooks install -q"
   },
-  "workspaces": [
-    "packages/*",
-    "demo/*"
-  ],
+  "peerDependencies": {
+    "react": ">=18"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@pretty-cozy/eslint-config": "^0.1.0",
     "@pretty-cozy/git-hooks": "^0.1.0",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
+    "@types/react": "^18.2.6",
+    "eslint-import-resolver-exports": "^1.0.0-beta.5",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "npm-run-all": "^4.1.5",
+    "react": "^18.2.0",
     "rimraf": "^5.0.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
