--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,9 +1,11 @@
 {
   "extends": "./tsconfig.json",
+  "include": ["./src"],
   "exclude": ["./**/*.test.ts"],
   "compilerOptions": {
     "declaration": false,
     "noEmit": false,
+    "outDir": "./dist/cjs",
 
     "module": "CommonJS",
     "target": "es2015"
