--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "lint": "eslint ./src --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "generate-docs": "node ./scripts/generateDocs.js",
-    "prepare": "cozy-git-hooks install -q"
+    "prepare": "cozy-git-hooks install -q",
+    "release": "release-it"
   },
   "peerDependencies": {
     "react": ">=18"
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@pretty-cozy/eslint-config": "^0.1.0",
     "@pretty-cozy/git-hooks": "^0.1.0",
+    "@release-it/conventional-changelog": "^5.1.1",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
     "@types/react": "^18.2.6",
@@ -71,6 +73,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
+    "release-it": "^15.11.0",
     "rimraf": "^5.0.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
