--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yaasl",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha.0",
   "description": "yet another atomic store library",
   "keywords": [
     "atom",
