--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,7 +38,7 @@
     "validate": "run-s lint test build"
   },
   "dependencies": {
-    "@yaasl/utils": "^0.7.0"
+    "@yaasl/utils": "0.7.0"
   },
   "jest": {
     "preset": "ts-jest",
