--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -41,7 +41,7 @@
     "react": ">=17"
   },
   "dependencies": {
-    "@yaasl/core": "^0.7.0"
+    "@yaasl/core": "0.7.0"
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
