--- a/scripts/.eslintrc
+++ b/scripts/.eslintrc
@@ -1,4 +1,7 @@
 {
   "root": true,
-  "extends": ["@pretty-cozy/eslint-config/base"]
+  "extends": ["@pretty-cozy/eslint-config/base"],
+  "rules": {
+    "import/no-extraneous-dependencies": "off"
+  }
 }
