chore: Fix demo lint scripts

--- a/demo/react/.eslintrc
+++ b/demo/react/.eslintrc
@@ -1,8 +1,12 @@
 {
+  "root": true,
   "extends": [
     "@pretty-cozy/eslint-config/base-ts",
     "@pretty-cozy/eslint-config/react"
   ],
+  "parserOptions": {
+    "project": ["./tsconfig.json", "./tsconfig.node.json"]
+  },
   "settings": {
     "import/resolver": {
       "typescript": {
