--- a/demo/react/tsconfig.json
+++ b/demo/react/tsconfig.json
@@ -12,5 +12,6 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx"
-  }
+  },
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
