--- a/demo/vanilla/tsconfig.json
+++ b/demo/vanilla/tsconfig.json
@@ -11,5 +11,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true
-  }
+  },
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
