--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "build": "npm run build --workspaces",
     "test": "jest --testMatch **/*.test.*",
     "test:watch": "npm run test -- --watchAll",
-    "lint": "npm run lint --workspaces",
-    "lint:fix": "npm run lint:fix --workspaces",
+    "lint": "npx eslint . --ext .ts,.tsx --ignore-path .gitignore",
+    "lint:fix": "npm run lint -- --fix",
     "validate": "npm run validate --workspaces",
     "generate-docs": "node ./scripts/generateDocs.js",
     "prepare": "cozy-git-hooks install -q",
