--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "validate": "npm run validate --workspaces",
     "generate-docs": "node ./scripts/generateDocs.js",
     "prepare": "cozy-git-hooks install -q",
-    "release": "node ./scripts/release.js --dry-run"
+    "release": "node ./scripts/release.js --dry-run",
+    "upgrade": "ncu --deep -u -t minor -f !@yaasl/*",
+    "upgrade:latest": "npm run upgrade -- -t latest"
   },
   "devDependencies": {
     "@pretty-cozy/eslint-config": "^0.2.0",
@@ -33,6 +35,7 @@
     "glob": "^10.3.10",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "npm-check-updates": "^16.14.14",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
