--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/devtools",
-  "version": "0.7.0-alpha.0",
+  "version": "0.7.0",
   "description": "yaasl redux-devtools-extension middleware",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -36,8 +36,8 @@
     "validate": "run-s lint test build"
   },
   "dependencies": {
-    "@yaasl/core": "0.7.0-alpha.0",
-    "@yaasl/utils": "0.7.0-alpha.0"
+    "@yaasl/core": "0.7.0",
+    "@yaasl/utils": "0.7.0"
   },
   "jest": {
     "preset": "ts-jest",
