--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "npm run build --workspaces",
     "test": "jest --testMatch **/*.test.*",
+    "test:coverage": "npm run test -- --coverage",
     "test:watch": "npm run test -- --watchAll",
     "lint": "npx eslint . --ext .ts,.tsx,.js --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
@@ -43,7 +44,10 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "jsdom"
+    "testEnvironment": "jsdom",
+    "collectCoverageFrom": [
+      "packages/*/src/**"
+    ]
   },
   "lint-staged": {
     "*.{json,md,html}": [
