--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   ],
   "scripts": {
     "build": "npm run build --workspaces",
-    "test": "jest --testMatch **/*.test.*",
+    "test": "vitest run",
     "test:coverage": "npm run test -- --coverage",
-    "test:watch": "npm run test -- --watchAll",
+    "test:watch": "npm run test -- --watch",
     "lint": "npx eslint . --ext .ts,.tsx,.js --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "validate": "npm run validate --workspaces",
@@ -30,24 +30,15 @@
   "devDependencies": {
     "@pretty-cozy/eslint-config": "^0.2.0",
     "@pretty-cozy/git-hooks": "^0.2.0",
-    "@types/jest": "^29.5.12",
+    "@vitest/coverage-v8": "^1.3.0",
     "enquirer": "^2.4.1",
     "eslint-import-resolver-exports": "^1.0.0-beta.5",
     "glob": "^10.3.10",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "npm-check-updates": "^16.14.14",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "jsdom",
-    "collectCoverageFrom": [
-      "packages/*/src/**"
-    ]
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.0"
   },
   "lint-staged": {
     "*.{json,md,html}": [
