--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -41,7 +41,8 @@
     "react": ">=17"
   },
   "dependencies": {
-    "@yaasl/core": "0.8.0-alpha.1"
+    "@yaasl/core": "0.8.0-alpha.1",
+    "@yaasl/utils": "0.8.0-alpha.1"
   },
   "devDependencies": {
     "@testing-library/react": "^14.2.1",
