chore: Use @pretty-cozy/release-tools for release script

--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "*.{json,md,html}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "@pretty-cozy/release-tools": "^0.3.0-alpha.0"
   }
 }
