--- a/package.json
+++ b/package.json
@@ -28,24 +28,23 @@
     "upgrade:latest": "npm run upgrade -- -t latest"
   },
   "devDependencies": {
-    "@pretty-cozy/eslint-config": "^0.2.0",
-    "@pretty-cozy/git-hooks": "^0.2.0",
-    "@vitest/coverage-v8": "^1.3.0",
+    "@pretty-cozy/eslint-config": "^0.3.0",
+    "@pretty-cozy/git-hooks": "^0.3.0",
+    "@pretty-cozy/release-tools": "^0.3.0",
+    "@vitest/coverage-v8": "^1.6.0",
     "enquirer": "^2.4.1",
     "eslint-import-resolver-exports": "^1.0.0-beta.5",
-    "glob": "^10.3.10",
-    "npm-check-updates": "^16.14.15",
+    "glob": "^10.3.12",
+    "jsdom": "^24.0.0",
+    "npm-check-updates": "^16.14.20",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
-    "typescript": "^5.3.3",
-    "vitest": "^1.3.0"
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   },
   "lint-staged": {
     "*.{json,md,html}": [
       "prettier --write"
     ]
-  },
-  "dependencies": {
-    "@pretty-cozy/release-tools": "^0.3.0-alpha.0"
   }
 }
