--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -26,8 +26,8 @@
     "compile:mjs": "tsc -p ./tsconfig.node.json --outDir ./dist/mjs -m es2020 -t es2020",
     "compile:cjs": "tsc -p ./tsconfig.node.json --outDir ./dist/cjs -m commonjs -t es2015",
     "compile:types": "tsc -p ./tsconfig.node.json --outDir ./dist/@types --declaration --emitDeclarationOnly",
-    "test": "vitest run --passWithNoTests",
-    "test:watch": "vitest watch --passWithNoTests",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "validate": "run-s lint test build"
