feat(core/middleware): Allow providing atom value types

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
   "rules": {
     "@typescript-eslint/consistent-type-assertions": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-invalid-void-type": "off",
     "import/no-extraneous-dependencies": ["error", {
       "peerDependencies": true
     }]
