--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/preact",
-  "version": "0.8.0-alpha.4",
+  "version": "0.8.0",
   "description": "yet another atomic store library (preact)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -41,8 +41,8 @@
     "preact": ">=10"
   },
   "dependencies": {
-    "@yaasl/core": "0.8.0-alpha.4",
-    "@yaasl/utils": "0.8.0-alpha.4"
+    "@yaasl/core": "0.8.0",
+    "@yaasl/utils": "0.8.0"
   },
   "devDependencies": {
     "@testing-library/preact": "^3.2.3",
