--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "npm run build --workspaces",
     "test": "vitest run",
     "test:coverage": "npm run test -- --coverage",
-    "test:watch": "npm run test -- --watch",
+    "test:watch": "vitest watch",
     "lint": "npx eslint . --ext .ts,.tsx,.js --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "validate": "npm run validate --workspaces",
