docs: Add docsify documentation

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "npx eslint . --ext .ts,.tsx,.js --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "validate": "npm run validate --workspaces",
-    "generate-docs": "node ./scripts/generateDocs.js",
+    "docs:generate": "node ./scripts/generateDocs.js",
+    "docs": "docsify serve ./docs",
     "prepare": "cozy-git-hooks install -q",
     "release": "node ./scripts/release.js",
     "upgrade": "ncu --deep -u -t minor -f !@yaasl/*",
@@ -32,6 +33,7 @@
     "@pretty-cozy/git-hooks": "^0.4.0",
     "@pretty-cozy/release-tools": "^0.4.0",
     "@vitest/coverage-v8": "^1.6.0",
+    "docsify-cli": "^4.4.4",
     "enquirer": "^2.4.1",
     "eslint-import-resolver-exports": "^1.0.0-beta.5",
     "glob": "^10.3.15",
