--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint:fix": "npm run lint -- --fix",
     "validate": "npm run validate --workspaces",
     "docs:generate": "node ./scripts/generateDocs.js",
+    "docs:publish": "gh-pages --dist docs --dotfiles --message 'chore: Publish docs'",
     "docs": "docsify serve ./docs",
     "prepare": "cozy-git-hooks install -q",
     "release": "node ./scripts/release.js",
@@ -36,6 +37,7 @@
     "docsify-cli": "^4.4.4",
     "enquirer": "^2.4.1",
     "eslint-import-resolver-exports": "^1.0.0-beta.5",
+    "gh-pages": "^6.1.1",
     "glob": "^10.3.15",
     "jsdom": "^24.0.0",
     "npm-check-updates": "^16.14.20",
