--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@yaasl/devtools",
   "version": "0.9.2",
-  "description": "yaasl redux-devtools-extension middleware",
+  "description": "yaasl debugging tools (e.g. redux-devtools-extension middleware)",
   "author": "PrettyCoffee",
   "license": "MIT",
   "homepage": "https://github.com/PrettyCoffee/yaasl#readme",
