--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/utils",
-  "version": "0.9.2",
+  "version": "0.10.0-alpha.0",
   "description": "Utilities for @yaasl packages",
   "author": "PrettyCoffee",
   "license": "MIT",
