--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "packages/devtools",
     "packages/react",
     "packages/preact",
-    "demo/*"
+    "demo/*",
+    "docs/"
   ],
   "scripts": {
     "build": "npm run build --workspaces",
@@ -21,9 +22,9 @@
     "lint": "npx eslint . --ext .ts,.tsx,.js --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "validate": "npm run validate --workspaces",
+    "docs": "npm run -w docs start",
+    "docs:publish": "npm run -w docs publish",
     "docs:generate": "node ./scripts/generateDocs.js",
-    "docs:publish": "gh-pages --dist docs --dotfiles --message \"chore: Publish docs\"",
-    "docs": "docsify serve ./docs",
     "prepare": "cozy-git-hooks install -q",
     "release": "node ./scripts/release.js",
     "upgrade": "ncu --deep -u -t minor -f !@yaasl/*",
@@ -34,7 +35,6 @@
     "@pretty-cozy/git-hooks": "^0.4.0",
     "@pretty-cozy/release-tools": "^0.4.0",
     "@vitest/coverage-v8": "^1.6.0",
-    "docsify-cli": "^4.4.4",
     "enquirer": "^2.4.1",
     "eslint-import-resolver-exports": "^1.0.0-beta.5",
     "gh-pages": "^6.1.1",
