--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "start": "docsify serve ./",
-    "publish": "gh-pages --dist ./ --dotfiles --message \"chore: Publish docs\"",
+    "publish": "rimraf ./node_modules && gh-pages --dist ./ --dotfiles --message \"chore: Publish docs\"",
     "build": "echo \"no build step\"",
     "postinstall": "node ../scripts/installDocsify.js"
   },
@@ -16,6 +16,7 @@
     "prismjs": "^1.29.0"
   },
   "devDependencies": {
-    "docsify-cli": "^4.4.4"
+    "docsify-cli": "^4.4.4",
+    "rimraf": "^5.0.7"
   }
 }
