--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -13,9 +13,9 @@
     "url": "https://github.com/PrettyCoffee/yaasl/issues"
   },
   "main": "./dist/cjs/index.js",
-  "types": "./dist/@types/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "exports": {
-    "types": "./dist/@types/index.d.ts",
+    "types": "./dist/types/index.d.ts",
     "import": "./dist/mjs/index.js",
     "require": "./dist/cjs/index.js"
   },
@@ -25,7 +25,7 @@
     "compile": "run-p compile:mjs compile:cjs compile:types",
     "compile:mjs": "tsc -p ./tsconfig.node.json --outDir ./dist/mjs -m esnext -t esnext",
     "compile:cjs": "tsc -p ./tsconfig.node.json --outDir ./dist/cjs -m commonjs -t es2015",
-    "compile:types": "tsc -p ./tsconfig.node.json --outDir ./dist/@types --declaration --emitDeclarationOnly",
+    "compile:types": "tsc -p ./tsconfig.node.json --outDir ./dist/types --declaration --emitDeclarationOnly",
     "test": "vitest run",
     "test:watch": "vitest watch",
     "lint": "eslint ./src",
