chore(docs): Improve publish script

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "start": "docsify serve ./",
-    "publish": "rimraf ./node_modules && gh-pages --dist ./ --dotfiles --message \"chore: Publish docs\"",
+    "publish": "rimraf ./node_modules/.cache && gh-pages --dist ./ --dotfiles --message \"chore: Publish docs\"",
     "build": "echo \"no build step\"",
     "postinstall": "node ../scripts/installDocsify.js"
   },
