--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "start": "docsify serve ./",
-    "publish": "rimraf ./node_modules && gh-pages --dist ./ --dotfiles --message \"chore: Publish docs\"",
+    "publish": "rimraf ./node_modules/.cache && gh-pages --dist ./ --dotfiles --message \"chore: Publish docs\"",
     "build": "echo \"no build step\"",
     "postinstall": "node ../scripts/installDocsify.js"
   },
@@ -19,6 +19,6 @@
   },
   "devDependencies": {
     "docsify-cli": "^4.4.4",
-    "rimraf": "^5.0.7"
+    "rimraf": "^5.0.10"
   }
 }
