--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/core",
-  "version": "0.10.2",
+  "version": "0.11.0-alpha.0",
   "description": "yet another atomic store library (vanilla-js)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -38,7 +38,7 @@
     "validate": "run-s lint test build"
   },
   "dependencies": {
-    "@yaasl/utils": "0.10.2"
+    "@yaasl/utils": "0.11.0-alpha.0"
   },
   "eslintConfig": {
     "extends": [
