--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -17,18 +17,19 @@
   "bugs": {
     "url": "https://github.com/PrettyCoffee/yaasl/issues"
   },
+  "sideEffects": false,
   "main": "./dist/cjs/index.js",
   "types": "./dist/@types/index.d.ts",
   "exports": {
     "types": "./dist/@types/index.d.ts",
-    "import": "./dist/mjs/index.js",
+    "import": "./dist/esm/index.js",
     "require": "./dist/cjs/index.js"
   },
   "scripts": {
     "build": "run-s clean compile",
     "clean": "rimraf ./dist",
-    "compile": "run-p compile:mjs compile:cjs compile:types",
-    "compile:mjs": "tsc -p ./tsconfig.node.json --outDir ./dist/mjs -m esnext -t esnext",
+    "compile": "run-p compile:esm compile:cjs compile:types",
+    "compile:esm": "tsc -p ./tsconfig.node.json --outDir ./dist/esm -m esnext -t esnext",
     "compile:cjs": "tsc -p ./tsconfig.node.json --outDir ./dist/cjs -m commonjs -t es2015",
     "compile:types": "tsc -p ./tsconfig.node.json --outDir ./dist/@types --declaration --emitDeclarationOnly",
     "test": "vitest run",
