--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "vitest run",
     "test:coverage": "npm run test -- --coverage",
     "test:watch": "vitest watch",
-    "lint": "npx eslint . --ext .ts,.tsx,.js --ignore-path .gitignore",
+    "lint": "eslint",
     "lint:fix": "npm run lint -- --fix",
     "validate": "npm run validate --workspaces",
     "docs": "npm run -w docs start",
@@ -30,9 +30,9 @@
     "upgrade:latest": "npm run upgrade -- -t latest"
   },
   "devDependencies": {
-    "@pretty-cozy/eslint-config": "^0.4.0",
-    "@pretty-cozy/git-hooks": "^0.4.0",
-    "@pretty-cozy/release-tools": "^0.4.0",
+    "@pretty-cozy/eslint-config": "^0.5.1",
+    "@pretty-cozy/git-hooks": "^0.5.1",
+    "@pretty-cozy/release-tools": "^0.5.1",
     "@vitest/coverage-v8": "^1.6.0",
     "enquirer": "^2.4.1",
     "eslint-import-resolver-exports": "^1.0.0-beta.5",
