--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -40,15 +40,16 @@
     "validate": "run-s lint test build"
   },
   "peerDependencies": {
-    "react": ">=17"
+    "react": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@yaasl/core": "0.11.0-alpha.2",
     "@yaasl/utils": "0.11.0-alpha.2"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.3.1",
+    "@testing-library/react": "^16.2.0",
     "@types/react": "^18.3.18",
+    "react-dom": "^18.3.1",
     "react": "^18.3.1"
   },
   "lint-staged": {
