--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/core",
-  "version": "0.11.0-alpha.3",
+  "version": "0.11.0",
   "description": "yet another atomic store library (vanilla-js)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -40,7 +40,7 @@
     "validate": "run-s lint test build"
   },
   "dependencies": {
-    "@yaasl/utils": "0.11.0-alpha.3"
+    "@yaasl/utils": "0.11.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
