--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/devtools",
-  "version": "0.11.0-alpha.3",
+  "version": "0.11.0",
   "description": "yaasl debugging tools (e.g. redux-devtools-extension middleware)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -38,8 +38,8 @@
     "validate": "run-s lint test build"
   },
   "dependencies": {
-    "@yaasl/core": "0.11.0-alpha.3",
-    "@yaasl/utils": "0.11.0-alpha.3"
+    "@yaasl/core": "0.11.0",
+    "@yaasl/utils": "0.11.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
