--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/react",
-  "version": "0.11.0-alpha.3",
+  "version": "0.11.0",
   "description": "yet another atomic store library (react)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -43,8 +43,8 @@
     "react": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@yaasl/core": "0.11.0-alpha.3",
-    "@yaasl/utils": "0.11.0-alpha.3"
+    "@yaasl/core": "0.11.0",
+    "@yaasl/utils": "0.11.0"
   },
   "devDependencies": {
     "@testing-library/react": "^16.2.0",
