--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "npm-check-updates": "^17.1.15",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
+    "strip-indent": "^3.0.0",
     "typescript": "^5.8.2",
     "vitest": "^3.0.9"
   },
