--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "upgrade:latest": "npm run upgrade -- -t latest"
   },
   "devDependencies": {
-    "@pretty-cozy/eslint-config": "^0.6.0",
+    "@pretty-cozy/eslint-config": "^0.7.0-alpha.2",
     "@pretty-cozy/git-hooks": "^0.6.0",
     "@pretty-cozy/release-tools": "^0.7.0-alpha.1",
     "@vitest/coverage-v8": "^3.0.9",
