--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "upgrade:latest": "npm run upgrade -- -t latest"
   },
   "devDependencies": {
-    "@pretty-cozy/eslint-config": "^0.7.0-alpha.2",
+    "@pretty-cozy/eslint-config": "^0.7.0-",
     "@pretty-cozy/git-hooks": "^0.6.0",
-    "@pretty-cozy/release-tools": "^0.7.0-alpha.1",
+    "@pretty-cozy/release-tools": "^0.7.0",
     "@vitest/coverage-v8": "^3.0.9",
     "enquirer": "^2.4.1",
     "eslint-import-resolver-exports": "^1.0.0-beta.5",
