--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "docs/"
   ],
   "scripts": {
+    "start": "cd ./demo/react && npm run start",
     "build": "npm run build --workspaces",
     "test": "vitest run",
     "test:coverage": "npm run test -- --coverage",
