--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -40,15 +40,15 @@
     "validate": "run-s lint test build"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0"
-  },
-  "dependencies": {
     "@yaasl/core": "^0.12.1",
-    "@yaasl/utils": "^0.12.1"
+    "@yaasl/utils": "^0.12.1",
+    "react": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@testing-library/react": "^16.3.0",
     "@types/react": "^18.3.23",
+    "@yaasl/core": "^0.12.1",
+    "@yaasl/utils": "^0.12.1",
     "react-dom": "^18.3.1",
     "react": "^18.3.1"
   },
