--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/devtools",
-  "version": "0.13.0-alpha.1",
+  "version": "0.13.0",
   "description": "yaasl debugging tools (e.g. redux-devtools-extension middleware)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -38,12 +38,12 @@
     "validate": "run-s lint test build"
   },
   "peerDependencies": {
-    "@yaasl/core": "^0.13.0-alpha.5",
-    "@yaasl/utils": "^0.12.1"
+    "@yaasl/core": "^0.13.0",
+    "@yaasl/utils": "^0.13.0"
   },
   "devDependencies": {
-    "@yaasl/core": "^0.13.0-alpha.5",
-    "@yaasl/utils": "^0.12.1"
+    "@yaasl/core": "^0.13.0",
+    "@yaasl/utils": "^0.13.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
