--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/preact",
-  "version": "0.13.0-alpha.1",
+  "version": "0.13.0",
   "description": "yet another atomic store library (preact)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -40,14 +40,14 @@
     "validate": "run-s lint test build"
   },
   "peerDependencies": {
-    "@yaasl/core": "^0.13.0-alpha.5",
-    "@yaasl/utils": "^0.12.1",
+    "@yaasl/core": "^0.13.0",
+    "@yaasl/utils": "^0.13.0",
     "preact": ">=10"
   },
   "devDependencies": {
     "@testing-library/preact": "^3.2.4",
-    "@yaasl/core": "^0.13.0-alpha.5",
-    "@yaasl/utils": "^0.12.1",
+    "@yaasl/core": "^0.13.0",
+    "@yaasl/utils": "^0.13.0",
     "preact": "^10.26.9"
   },
   "lint-staged": {
