--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/react",
-  "version": "0.13.0-alpha.1",
+  "version": "0.13.0",
   "description": "yet another atomic store library (react)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -40,15 +40,15 @@
     "validate": "run-s lint test build"
   },
   "peerDependencies": {
-    "@yaasl/core": "^0.13.0-alpha.5",
-    "@yaasl/utils": "^0.12.1",
+    "@yaasl/core": "^0.13.0",
+    "@yaasl/utils": "^0.13.0",
     "react": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@testing-library/react": "^16.3.0",
     "@types/react": "^18.3.23",
-    "@yaasl/core": "^0.13.0-alpha.5",
-    "@yaasl/utils": "^0.12.1",
+    "@yaasl/core": "^0.13.0",
+    "@yaasl/utils": "^0.13.0",
     "react-dom": "^18.3.1",
     "react": "^18.3.1"
   },
