--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -40,14 +40,14 @@
     "validate": "run-s lint test build"
   },
   "peerDependencies": {
-    "@yaasl/core": "^0.13.1",
+    "@yaasl/core": "^0.14.0-alpha.0",
     "@yaasl/utils": "^0.13.1",
     "react": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.13",
-    "@yaasl/core": "^0.13.1",
+    "@yaasl/core": "^0.14.0-alpha.0",
     "@yaasl/utils": "^0.13.1",
     "react-dom": "^19.1.1",
     "react": "^19.1.1"
